gcc/algol60/testsuite/fail/array3.a60
'begin'
 'integer' 'array' a[5];
'end';
